apps/spotify/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spotify
  namespace: spotify
  labels:
    app: spotify
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /spotify
            pathType: Prefix
            backend:
              service:
                name: spotify
                port:
                  name: http
